resolved overflow

--- a/public/stylesheets/feed.css
+++ b/public/stylesheets/feed.css
@@ -2,6 +2,7 @@
     /* background-color: aqua; */
     height: calc(100vh - 60px);
     width: 100vw;
+    overflow-x: hidden;
 }
 
 .pins{
