--- a/public/stylesheets/userposts.css
+++ b/public/stylesheets/userposts.css
@@ -2,7 +2,7 @@
     /* background-color: aqua; */
     height: calc(100vh - 60px);
     width: 100vw;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 .heading{
@@ -21,7 +21,7 @@
     gap: 3px;
     display: flex;
     flex-wrap: wrap;
-    columns: 6;
+    columns: 6;         
     display: inline-block;
 }
 
